--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.port=8080
 
 # 2. Configuração da Conexão com SQL Server
 # Explicação: jdbc:sqlserver://[Onde];databaseName=[Qual Banco];[Segurança]
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GestaoUsuarios;encrypt=true;trustServerCertificate=true
 
 # Usuário e Senha
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=lucas
+spring.datasource.password=Starbank@@2099
 
 # Driver (O Motorista)
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -29,7 +29,6 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # (Opcional) show-sql desligado para não poluir o log com milhares de selects
-spring.jpa.show-sql=false
-
+spring.jpa.show-sql=true
 
 api.security.token.secret=!62yAAMN9hp*pk$xPXwqaJponw5PPD1XStb*SYz^
