Estrutura inicial Frontend: Home, Funcionarios, Setores, Cargos

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.port=8080
 
 # 2. Configuração da Conexão com SQL Server
 # Explicação: jdbc:sqlserver://[Onde];databaseName=[Qual Banco];[Segurança]
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GestaoUsuarios_Clone;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GestaoUsuarios;encrypt=true;trustServerCertificate=true
 
 # Usuário e Senha
 spring.datasource.username=lucas
-spring.datasource.password=Palmeiras@1914
+spring.datasource.password=Starbank@@2099
 
 # Driver (O Motorista)
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
