feat: implementa sistema completo de gestão com notificações e documentação
- Sistema de notificações (toasts, modais, validações)
- Otimizações de performance (debounce, requestAnimationFrame)
- Correções de segurança (JWT permissions, CORS)
- Validações de CPF e email em tempo real
- Documentação completa (Backend, Frontend e Geral)
- Correções no FuncionarioDTO para incluir IDs
- Ajustes no SecurityConfigurations para permissões corretas
- Loading states em todos os botões

--- a/Backend/src/main/resources/application-prod.properties
+++ b/Backend/src/main/resources/application-prod.properties
@@ -1,5 +1,8 @@
 # --- PERFIL DE PRODUÇÃO (Segurança Máxima) ---
 
+# Porta (opcional - algumas clouds usam ${PORT})
+server.port=${PORT:8080}
+
 # Nome da Aplicação
 spring.application.name=starpeople-prod
 
