--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,34 +1,18 @@
 spring.application.name=starpeople
 
-# 1. Configuração do Servidor Web (Tomcat)
+# ========== PERFIL ATIVO ==========
+# Usa 'local' em desenvolvimento, 'prod' em produção
+spring.profiles.active=local
+
+# ========== SERVIDOR WEB ==========
 server.port=8080
 
-# 2. Configuração da Conexão com SQL Server
-# Explicação: jdbc:sqlserver://[Onde];databaseName=[Qual Banco];[Segurança]
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GestaoUsuarios;encrypt=true;trustServerCertificate=true
-
-# Usuário e Senha
-spring.datasource.username=lucas
-spring.datasource.password=Starbank@@2099
-
-# Driver (O Motorista)
+# ========== BANCO DE DADOS SQL SERVER ==========
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GestaoUsuarios_Clone;encrypt=true;trustServerCertificate=true
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# 3. Configuração do JPA / Hibernate (O Tradutor Java -> SQL)
-# Mostra o SQL no console (útil para aprender)
-spring.jpa.show-sql=true
-# Formata o SQL para ficar bonito de ler
-spring.jpa.properties.hibernate.format_sql=true
-# Diz qual "sotaque" de SQL usar (SQL Server)
+# ========== JPA / HIBERNATE ==========
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-
-# Estratégia de Tabelas:
-# 'update': Mantém os dados e atualiza a estrutura se você mudar o Java.
-# 'validate': Só confere se está igual.
-# 'none': Não faz nada.
 spring.jpa.hibernate.ddl-auto=update
-
-# (Opcional) show-sql desligado para não poluir o log com milhares de selects
 spring.jpa.show-sql=true
-
-api.security.token.secret=!62yAAMN9hp*pk$xPXwqaJponw5PPD1XStb*SYz^
+spring.jpa.properties.hibernate.format_sql=true
